qtdemux: Fix crash with no cenc aux offset

https://bugzilla.gnome.org/show_bug.cgi?id=770951